--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,17 +49,17 @@ jobs:
 
             - name: Generate Keychain Credentials
               run: |
-                # Generate keychain name and password dynamically
-                export KEYCHAIN_NAME="build.keychain"
-                export KEYCHAIN_PASSWORD=$(openssl rand -base64 12)
-      
-                # Mask the password to hide it from logs
-                echo "::add-mask::$KEYCHAIN_PASSWORD"
+                  # Generate keychain name and password dynamically
+                  export KEYCHAIN_NAME="build.keychain"
+                  export KEYCHAIN_PASSWORD=$(openssl rand -base64 12)
 
-                # Store them in the GITHUB_ENV to use in later steps
-                echo "KEYCHAIN_NAME=$KEYCHAIN_NAME" >> $GITHUB_ENV
-                echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
-      
+                  # Mask the password to hide it from logs
+                  echo "::add-mask::$KEYCHAIN_PASSWORD"
+
+                  # Store them in the GITHUB_ENV to use in later steps
+                  echo "KEYCHAIN_NAME=$KEYCHAIN_NAME" >> $GITHUB_ENV
+                  echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+
             - name: Install signing certificate
               run: |
                   echo "Decode signing certificate..."
@@ -172,7 +172,7 @@ jobs:
 
             - name: Build and package (x64)
               run: |
-                npm run make -- --platform=win32 --arch=x64
+                  npm run make -- --platform=win32 --arch=x64
               working-directory: ./jccm
 
             - name: Sign Artifact with CodeSignTool
@@ -192,11 +192,17 @@ jobs:
             - name: Create Release file
               shell: cmd
               run: |
-                npm install squirrel --save-dev              
-                .\node_modules\.bin\squirrel --releasify out\make\squirrel.windows\x64\jccm-windows-x64-setup.exe
-                dir out\make\squirrel.windows\x64\
+                  echo "Checking if setup file exists..."
+                  if not exist out\make\squirrel.windows\x64\jccm-windows-x64-setup.exe (
+                    echo "Error: Setup file not found!" & exit 1
+                  )
+                  echo "Setup file found. Proceeding..."
+                  dir out\make\squirrel.windows\x64\
+                  npx squirrel --releasify out\make\squirrel.windows\x64\jccm-windows-x64-setup.exe
+                  echo "Files after releasify:"
+                  dir out\make\squirrel.windows\x64\
               working-directory: .\jccm
-    
+
             - name: Upload windows artifacts
               uses: actions/upload-artifact@v3
               with:
