--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,6 +174,7 @@ jobs:
               run: |
                   npm run make -- --platform=win32 --arch=x64
                   dir out\make\squirrel.windows\x64\
+                  del out\make\squirrel.windows\x64\RELEASES
               working-directory: ./jccm
 
             - name: Sign Artifact with CodeSignTool
@@ -192,12 +193,15 @@ jobs:
             - name: Recreate RELEASES File
               shell: cmd
               run: |
-                  del jccm\out\make/\squirrel.windows\x64\RELEASES
-                  for %I in (jccm\out\make\squirrel.windows\x64\*.nupkg) do (
-                    set HASH=%~nI
-                    certutil -hashfile "%I" SHA1 | findstr /v "hash" > hash.txt
-                    set /p HASH=<hash.txt
-                    echo %HASH% %~nI %~zI >> jccm\out\make\squirrel.windows\x64\RELEASES
+                  @echo off
+                  setlocal enabledelayedexpansion
+                  > jccm\out\make\squirrel.windows\x64\RELEASES (
+                    for %%I in (jccm\out\make\squirrel.windows\x64\*.nupkg) do (
+                      echo Processing: %%I
+                      certutil -hashfile "%%I" SHA1 | findstr /v "hash" > hash.txt
+                      set /p HASH=<hash.txt
+                      echo !HASH! %%~nxI %%~zI
+                    )
                   )
 
             - name: Upload windows artifacts
