--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,16 +177,52 @@ jobs:
                   del out\make\squirrel.windows\x64\RELEASES
               working-directory: ./jccm
 
+            # - name: Sign Artifact with CodeSignTool
+            #   uses: sslcom/esigner-codesign@develop
+            #   continue-on-error: true
+            #   with:
+            #       command: batch_sign
+            #       username: ${{ secrets.ES_USERNAME }}
+            #       password: ${{ secrets.ES_PASSWORD }}
+            #       credential_id: ${{ secrets.ES_CREDENTIAL_ID }}
+            #       totp_secret: ${{ secrets.ES_TOTP_SECRET }}
+            #       dir_path: ${GITHUB_WORKSPACE}/jccm/out/make/squirrel.windows/x64
+            #       malware_block: false
+            #       override: true
+
+            - name: Sign setup.exe with CodeSignTool
+              uses: sslcom/esigner-codesign@develop
+              continue-on-error: true
+              with:
+                  command: sign
+                  username: ${{secrets.ES_USERNAME}}
+                  password: ${{secrets.ES_PASSWORD}}
+                  credential_id: ${{secrets.ES_CREDENTIAL_ID}}
+                  totp_secret: ${{secrets.ES_TOTP_SECRET}}
+                  file_path: jccm/out/make/squirrel.windows/x64/jccm-windows-x64-setup.exe
+                  malware_block: false
+                  override: true
+
+            - name: Get Nupkg Filename
+              id: get_nupkg
+              shell: cmd
+              run: |
+                  @echo off
+                  for /f "delims=" %%F in ('dir /b /o:-d jccm\out\make\squirrel.windows\x64\*.nupkg') do (
+                    echo "nupkg_file=jccm\out\make\squirrel.windows\x64\%%F" >> $env:GITHUB_ENV
+                    goto :EOF
+                  )
+
             - name: Sign Artifact with CodeSignTool
               uses: sslcom/esigner-codesign@develop
               continue-on-error: true
               with:
-                  command: batch_sign
-                  username: ${{ secrets.ES_USERNAME }}
-                  password: ${{ secrets.ES_PASSWORD }}
-                  credential_id: ${{ secrets.ES_CREDENTIAL_ID }}
-                  totp_secret: ${{ secrets.ES_TOTP_SECRET }}
-                  dir_path: ${GITHUB_WORKSPACE}/jccm/out/make/squirrel.windows/x64
+                  command: sign
+                  username: ${{secrets.ES_USERNAME}}
+                  password: ${{secrets.ES_PASSWORD}}
+                  credential_id: ${{secrets.ES_CREDENTIAL_ID}}
+                  totp_secret: ${{secrets.ES_TOTP_SECRET}}
+                  file_path: ${{env.nupkg_file}}
                   malware_block: false
                   override: true
 
