--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,15 +203,15 @@ jobs:
                   malware_block: false
                   override: true
 
-            - name: Get Nupkg Filename
-              id: get_nupkg
-              shell: cmd
-              run: |
-                  @echo off
-                  for /f "delims=" %%F in ('dir /b /o:-d jccm\out\make\squirrel.windows\x64\*.nupkg') do (
-                    echo "nupkg_file=jccm\out\make\squirrel.windows\x64\%%F" >> $env:GITHUB_ENV
-                    goto :EOF
-                  )
+            # - name: Get Nupkg Filename
+            #   id: get_nupkg
+            #   shell: cmd
+            #   run: |
+            #       @echo off
+            #       for /f "delims=" %%F in ('dir /b /o:-d jccm\out\make\squirrel.windows\x64\*.nupkg') do (
+            #         echo "nupkg_file=jccm\out\make\squirrel.windows\x64\%%F" >> $env:GITHUB_ENV
+            #         goto :EOF
+            #       )
 
             - name: Sign Artifact with CodeSignTool
               uses: sslcom/esigner-codesign@develop
@@ -222,7 +222,7 @@ jobs:
                   password: ${{secrets.ES_PASSWORD}}
                   credential_id: ${{secrets.ES_CREDENTIAL_ID}}
                   totp_secret: ${{secrets.ES_TOTP_SECRET}}
-                  file_path: ${{env.nupkg_file}}
+                  file_path: jccm/out/make/squirrel.windows/x64/jccm-windows-x64-setup-1.2.6-full.nupkg
                   malware_block: false
                   override: true
 
