Fix: Local and Cloud exports that were missing or failing to resolve certain fields

--- a/jccm/package.json
+++ b/jccm/package.json
@@ -49,6 +49,7 @@
         "@fluentui/react-components": "^9.49.2",
         "@fluentui/react-icons": "^2.0.239",
         "@microlink/react-json-view": "^1.23.1",
+        "@monaco-editor/react": "^4.6.0",
         "@xterm/addon-fit": "^0.10.0",
         "@xterm/xterm": "^5.5.0",
         "ag-grid-react": "^31.3.2",
@@ -67,6 +68,8 @@
         "ip": "^2.0.1",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
+        "monaco-editor": "^0.52.2",
+        "monaco-editor-webpack-plugin": "^7.1.0",
         "nedb": "^1.8.0",
         "nedb-promises": "^6.2.3",
         "node-cache": "^5.1.2",
