--- a/jccm/package.json
+++ b/jccm/package.json
@@ -2,7 +2,7 @@
     "name": "jccm",
     "productName": "Juniper Cloud Connection Manager",
     "description": "Juniper Cloud Connection Manager",
-    "version": "1.2.17",
+    "version": "1.3.0",
     "main": ".webpack/main",
     "scripts": {
         "start": "pkill -9 node; nodemon --watch ./src --ext js,json --ignore ./src/Frontend/ --exec 'electron-forge start'",
@@ -59,12 +59,14 @@
         "cookie": "^0.6.0",
         "crypto": "^1.0.1",
         "date-fns": "^3.6.0",
+        "diff": "^7.0.0",
         "electron-reload": "^2.0.0-alpha.1",
         "electron-titlebar-windows": "^3.0.0",
         "electron-updater": "^6.3.9",
         "express": "^4.19.2",
         "fetch-cookie": "^3.0.1",
         "fs": "^0.0.1-security",
+        "hexy": "^0.3.5",
         "immutable": "^4.3.6",
         "ip": "^2.0.1",
         "js-yaml": "^4.1.0",
@@ -88,6 +90,7 @@
         "set-cookie-parser": "^2.6.0",
         "socket.io-client": "^4.7.5",
         "ssh2": "^1.15.0",
+        "timers-browserify": "^2.0.12",
         "tough-cookie": "^4.1.4",
         "update-electron-app": "^3.0.0",
         "uuid": "^9.0.1",
