--- a/jccm/package.json
+++ b/jccm/package.json
@@ -47,7 +47,7 @@
         "@babel/preset-react": "^7.24.1",
         "@electron-forge/maker-pkg": "^7.4.0",
         "@fluentui/react-components": "^9.49.2",
-        "@fluentui/react-icons": "^2.0.239",
+        "@fluentui/react-icons": "^2.0.309",
         "@microlink/react-json-view": "^1.23.1",
         "@monaco-editor/react": "^4.6.0",
         "@xterm/addon-fit": "^0.10.0",
@@ -74,6 +74,7 @@
         "mitt": "^3.0.1",
         "monaco-editor": "^0.52.2",
         "monaco-editor-webpack-plugin": "^7.1.0",
+        "monaco-yaml": "^5.4.0",
         "nedb": "^1.8.0",
         "nedb-promises": "^6.2.3",
         "node-cache": "^5.1.2",
